-
Bug
-
Resolution: Done
-
Not Evaluated
-
4.7.4
-
None
-
Win7, Qt pre 4.7.4 3efaed62e11e9e461f7244a99a233140b9f28510
Symbian^3
The documentation of TextInput says:
"TextInput.PasswordEchoOnEdit - Displays all but the current character as asterixes."
The actual behavior is that all the characters are revealed while the TextInput is focused (textinput_pwechoonedit_editing.png). As the focus is lost all the characters are replaced by asterisks (textinput_pwechoonedit_focuslost.png).
Symbian specific note:
On Symbian platform (and possibly other mobile device platforms) the TextInput.Password echo mode shows the current character for a couple of seconds before replacing it by an asterisk. So, there's no need to use TextInput.PasswordEchoOnEdit echo mode to get this behavior like the documentation seems to indicate. Using it would result in the behavior described above. I.e. on Symbian TextInput.Password functions approximately as TextInput.PasswordEchoOnEdit is currently documented.