Correct TextInput.PasswordEchoOnEdit documentation.

The documentation incorrectly stated that this mode masked all but
the last character, the actual behavior is as described in the
QLineEdit documentation.

Task-number: QTBUG-20003

Change-Id: I8a89a6818c930125821435bc04121340968dfbb2
Reviewed-on: http://codereview.qt.nokia.com/2067
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Andrew den Exter <andrew.den-exter@nokia.com>